Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=
 IMAGES_BASE_URL=
-USERS='{"user1":"password1","user2":"password2"}'
+USERS='{"emily":"computer1g","user2":"password2"}'
 AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
 AWS_S3_BUCKET=
